hphp/hack/test/typecheck/reactive/owned_mutable9.php.exp
File "owned_mutable9.php", line 12, characters 19-19:
Member f has the wrong type (Typing[4341])
File "owned_mutable9.php", line 5, characters 42-43:
Incompatible mutabilities:
File "owned_mutable9.php", line 5, characters 42-43:
This parameter is owned mutable
File "owned_mutable9.php", line 12, characters 23-24:
This parameter is immutable
